@@ -862,6 +862,8 @@ t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/120110_M00119_0068_AMS0002022-
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/120110_M00119_0068_AMS0002022-00300/RunInfo.xml
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/120110_M00119_0068_AMS0002022-00300/runParameters.xml
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/120110_M00119_0068_AMS0002022-00300/SampleSheet.csv
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/160408_HS31_19395_B_H5MMFADXY/Data/Intensities/config.xml
+t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/160408_HS31_19395_B_H5MMFADXY/RunInfo.xml
 t/data/long_info/npg/run/4655.xml
 t/data/long_info/Recipe_GA2-PEM_MP_2x76Cycle+8_v7.7.xml
 t/data/long_info/TileLayout.xml
